<resources>
  <string name="app_name">Makabyclean</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <string name="main_text">
    <b>Клининговая компания "MakabyClean"</b> специализируется
    на предоставлении услуг профессиональной уборки жилых и
    коммерческих помещений.
    Надежный и опытный персонал нашей компании готов
    предоставить Вам качественное обслуживание, которое Вы заслуживаете.
    Наша цель заключается в обеспечении соотношения
    высокого уровня профессиональной уборки и стоимости услуг.
  </string>
  <string name="header_text">MAKABYCLEAN.RU</string>
  <string name="nav_text">mkbklean@gmail.com</string>
  <string name="menu_item_main">Главная</string>
  <string name="menu_item_order">Заказ</string>

  <string name="hint">Выберите тип услуги</string>

  <string-array name="services">
    <item>Ежедневная уборка</item>
    <item>Уборка офисов</item>
  </string-array>

  <string name="name_hint">Иван</string>
  <string name="name_help">Ваше имя</string>
  <string name="phone_hint">+7 (812) 607–17–47</string>
  <string name="phone_help">Ваш номер телефона</string>
  <string name="mail_hint">mkbklean@gmail.com</string>
  <string name="mail_help">Ваш адрес электронной почты</string>
  <string name="accept_button">Оформить</string>
  <string name="company_phone">8 (812) 607 17 47</string>

</resources>
